--- a/package.json
+++ b/package.json
@@ -8,8 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.7.0",
+    "chart.js": "^2.9.3",
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "gsap": "^3.2.4",
+    "vue": "^2.6.11",
+    "vue-axios": "^2.1.5",
+    "vue-chartjs": "^3.5.0",
+    "vue-data-tables": "^3.4.5",
+    "vue-graph": "^0.8.7",
+    "vuejs-datatable": "^2.0.0-alpha.7"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
@@ -30,7 +40,8 @@
       "eslint:recommended"
     ],
     "parserOptions": {
-      "parser": "babel-eslint"
+      "parser": "babel-eslint",
+      "ecmaVersion": 6
     },
     "rules": {}
   },
