--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+  "engines": {
+    "node":"10.14.2"
+  },
   "dependencies": {
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
