--- a/package.json
+++ b/package.json
@@ -6,11 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "clean": "rm -rf build",
-    "deploy": "npm run clean && npm run build"
-  },
-  "engines": {
-    "node": "10.14.2"
+    "deploy": "npm run clean && npm run build",
+    "clean": "rm -rf build"
   },
   "dependencies": {
     "@amcharts/amcharts4": "^4.9.16",
@@ -30,9 +27,9 @@
     "vuejs-datatable": "^2.0.0-alpha.7"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.2.0",
-    "@vue/cli-plugin-eslint": "~4.2.0",
-    "@vue/cli-service": "~4.2.0",
+    "@vue/cli-plugin-babel": "^4.3.1",
+    "@vue/cli-plugin-eslint": "^4.3.1",
+    "@vue/cli-service": "^4.3.1",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
@@ -56,5 +53,8 @@
   "browserslist": [
     "> 1%",
     "last 2 versions"
-  ]
+  ],
+  "engines": {
+    "node": "10.14.2"
+  }
 }
