--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "clean": "rm -rf build"
   },
   "dependencies": {
-    "@amcharts/amcharts4": "^4.9.16",
-    "@amcharts/amcharts4-geodata": "^4.1.14",
+    "@amcharts/amcharts4": "^4.9.30",
+    "@amcharts/amcharts4-geodata": "^4.1.16",
     "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
-    "bootstrap-vue": "^2.11.0",
+    "bootstrap": "^4.5.0",
+    "bootstrap-vue": "^2.15.0",
     "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
-    "gsap": "^3.2.6",
+    "gsap": "^3.4.1",
+    "jquery": "^3.5.1",
+    "lodash": "^4.17.19",
+    "minimist": "^1.2.5",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vue-chartjs": "^3.5.0",
@@ -27,9 +30,9 @@
     "vuejs-datatable": "^2.0.0-alpha.7"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.3.1",
-    "@vue/cli-plugin-eslint": "^4.3.1",
-    "@vue/cli-service": "^4.3.1",
+    "@vue/cli-plugin-babel": "^4.4.6",
+    "@vue/cli-plugin-eslint": "^4.4.6",
+    "@vue/cli-service": "^4.4.6",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
