--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap-vue": "^2.15.0",
     "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
+    "element-ui": "^2.13.2",
     "gsap": "^3.4.1",
     "jquery": "^3.5.1",
     "lodash": "^4.17.19",
